# cmake-init-transitive

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-config.cmake  install-rules.cmake  variables.cmake
include/transitive/: transitive.hpp
source/: transitive.cpp
test/: CMakeLists.txt
test/source/: transitive_test.cpp
